--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
+    "start": "node build/app.js",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
