--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "rekrutacja",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node build.app.js"
   },
   "author": "",
   "license": "ISC",
